<resources>
    <string name="app_name">SharedPreferences</string>
    <string name="name">Name</string>
    <string name="dummy_name">Narenda Wicaksono</string>
    <string name="email">Email</string>
    <string name="dummy_email">narenda@dicoding.com</string>
    <string name="phone_number">No. Handphone</string>
    <string name="dummy_phone_number">123456</string>
    <string name="age">Age</string>
    <string name="dummy_age">30</string>
    <string name="is_love_mu">Suka Manchester United?</string>
    <string name="yes">Ya</string>
    <string name="no">Tidak</string>
    <string name="dummy_is_love_mu">IsLoveMU</string>
    <string name="save">Simpan</string>
    <string name="change">Ubah</string>
</resources>